parser/parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(c) { return c },
        peg$c1 = "class",
        peg$c2 = peg$literalExpectation("class", false),
        peg$c3 = "func",
        peg$c4 = peg$literalExpectation("func", false),
        peg$c5 = "number",
        peg$c6 = peg$literalExpectation("number", false),
        peg$c7 = "string",
        peg$c8 = peg$literalExpectation("string", false),
        peg$c9 = "boolean",
        peg$c10 = peg$literalExpectation("boolean", false),
        peg$c11 = /^[{]/,
        peg$c12 = peg$classExpectation(["{"], false, false),
        peg$c13 = /^[}]/,
        peg$c14 = peg$classExpectation(["}"], false, false),
        peg$c15 = /^[(]/,
        peg$c16 = peg$classExpectation(["("], false, false),
        peg$c17 = /^[)]/,
        peg$c18 = peg$classExpectation([")"], false, false),
        peg$c19 = /^[=]/,
        peg$c20 = peg$classExpectation(["="], false, false),
        peg$c21 = /^[;]/,
        peg$c22 = peg$classExpectation([";"], false, false),
        peg$c23 = "'",
        peg$c24 = peg$literalExpectation("'", false),
        peg$c25 = "\"",
        peg$c26 = peg$literalExpectation("\"", false),
        peg$c27 = ".",
        peg$c28 = peg$literalExpectation(".", false),
        peg$c29 = ",",
        peg$c30 = peg$literalExpectation(",", false),
        peg$c31 = "-",
        peg$c32 = peg$literalExpectation("-", false),
        peg$c33 = /^[a-zA-Z]/,
        peg$c34 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c35 = function(w) { return w.join("") },
        peg$c36 = /^[^"']/,
        peg$c37 = peg$classExpectation(["\"", "'"], true, false),
        peg$c38 = function(s) { return s.join("") },
        peg$c39 = /^[0-9]/,
        peg$c40 = peg$classExpectation([["0", "9"]], false, false),
        peg$c41 = /^[" "]/,
        peg$c42 = peg$classExpectation(["\"", " ", "\""], false, false),
        peg$c43 = /^[" """\n\t\r]/,
        peg$c44 = peg$classExpectation(["\"", " ", "\"", "\"", "\"", "\n", "\t", "\r"], false, false),
        peg$c45 = peg$otherExpectation("whitespace"),
        peg$c46 = /^[ \t\n\r]/,
        peg$c47 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
        peg$c48 = function(arg, ai) { return ai; },
        peg$c49 = function(arg, more) {
            let args = [arg];
            args = args.concat(more[0] ? more[0].args : []);
            args = args.map(a => a['type'] ? a : ((a.tokenType == "FuncCall" || a.tokenType == "Instantiate" || a.tokenType == "Variable") ? a : { type: 'identifier', value: a }));
            return {
                tokenType: "ArgumentsIn",
                args: args
            }
        },
        peg$c50 = function(type, arg, ad) { return ad; },
        peg$c51 = function(type, arg, more) {
            let args = [{
                type: type,
                identifier: arg
            }];
            args = args.concat(more[0] ? more[0].args : []);
            return {
                tokenType: "ArgumentsDefine",
                args: args
            }
        },
        peg$c52 = "constructor",
        peg$c53 = peg$literalExpectation("constructor", false),
        peg$c54 = function(ad, within) {
        	return {
            	tokenType: "Constructor",
                args: ad,
                within: within
        	}
        },
        peg$c55 = "if",
        peg$c56 = peg$literalExpectation("if", false),
        peg$c57 = "elif",
        peg$c58 = peg$literalExpectation("elif", false),
        peg$c59 = function(ex, wIf, elifEx, wElif) { return { tokenType: "ElifBlock", expression: elifEx, within: wElif }},
        peg$c60 = "else",
        peg$c61 = peg$literalExpectation("else", false),
        peg$c62 = function(ex, wIf, elseIfs, wElse) { return { tokenType: "ElseBlock", within: wElse }},
        peg$c63 = function(ex, wIf, elseIfs, elseBlock) {
            return {
                tokenType: "IfBlock",
                ifBlock: {
                    expression: ex,
                    within: wIf
                },
                elifBlocks: elseIfs,
                elseBlock: elseBlock
            }
        },
        peg$c64 = "//",
        peg$c65 = peg$literalExpectation("//", false),
        peg$c66 = /^[^("\n")]/,
        peg$c67 = peg$classExpectation(["(", "\"", "\n", "\"", ")"], true, false),
        peg$c68 = function(c) { return { tokenType: "Comment", comment: c.join("") } },
        peg$c69 = "while",
        peg$c70 = peg$literalExpectation("while", false),
        peg$c71 = function(ex, wWLoop) { return { tokenType: "WhileLoop", expression: ex, within: wWLoop } },
        peg$c72 = function(type, identifier, ex) { return ex },
        peg$c73 = function(type, identifier, res) {
            return {
                tokenType: "Definition",
        		type: type,
                identifier: identifier.trim(),
                equals: res
            }
        },
        peg$c74 = function(variable, ex) {
            return {
                tokenType: "Reassignment",
                variable: variable,
                equals: ex
            }
        },
        peg$c75 = "return",
        peg$c76 = peg$literalExpectation("return", false),
        peg$c77 = function() {return null},
        peg$c78 = function(ex) {return ex},
        peg$c79 = function(val) {
            return {
                tokenType: "Return",
                value: val
            }
        },
        peg$c80 = "break",
        peg$c81 = peg$literalExpectation("break", false),
        peg$c82 = function() {
            return {
                tokenType: "Break"
            }
        },
        peg$c83 = "new",
        peg$c84 = peg$literalExpectation("new", false),
        peg$c85 = function(className, args) {
            return {
                tokenType: "Instantiate",
                className: className,
                args: args
            }
        },
        peg$c86 = function(s, w) {
            return {
                tokenType: "Variable",
                scope: s,
                variableName: w
            }
        },
        peg$c87 = function(w, s2) { return s2 },
        peg$c88 = function(w, more) {
            let specs = [w];
            specs = specs.concat(more[0] ? more[0].scope : []);
            return {
                tokenType: "ScopeSpec",
                scope: specs.join(".")
            }
        },
        peg$c89 = function(v) { return { tokenType: "Primitive", type: "string", value: v } },
        peg$c90 = function(neg, n, dp, dec) { return dp + dec.join("") },
        peg$c91 = function(neg, n, extra) { return { tokenType: "Primitive", type: "number", value: parseFloat((neg ? neg : "") + n.join("") + (extra ? extra : "")) } },
        peg$c92 = "true",
        peg$c93 = peg$literalExpectation("true", false),
        peg$c94 = "false",
        peg$c95 = peg$literalExpectation("false", false),
        peg$c96 = function(b) { return { tokenType: "Primitive", type: "boolean", value: b == "true" ? true : false } },
        peg$c97 = "+",
        peg$c98 = peg$literalExpectation("+", false),
        peg$c99 = function(head, tail) {
              let x = tail.map(val => val);
              if(head.head && tail[0] && tail[0].length < 4){
                  return head.head
              }
              if(!tail[0] || !tail[0][3]){
                  return head
              }
              return {
              	  tokenType: "ArithmeticExpression",
                  left: head,
                  right: tail.map((val) => { return { tokenType: "ArithmeticOperation", op: val[1], value: val[3] } })
              }
          },
        peg$c100 = "*",
        peg$c101 = peg$literalExpectation("*", false),
        peg$c102 = "/",
        peg$c103 = peg$literalExpectation("/", false),
        peg$c104 = "%",
        peg$c105 = peg$literalExpectation("%", false),
        peg$c106 = function(head, tail) {
              let x = tail.map(val => val);
              if(head.head && tail[0] && tail[0].length < 4){
                  return head.head
              }
              if(!tail[0] || !tail[0][3]){
                  return head
              }
              return {
                  tokenType: "ArithmeticExpression",
                  left: head,
                  right: tail.map(val => { return { op: val[1], value: val[3] } })
              }
          },
        peg$c107 = "(",
        peg$c108 = peg$literalExpectation("(", false),
        peg$c109 = ")",
        peg$c110 = peg$literalExpectation(")", false),
        peg$c111 = function(expr) { return expr; },
        peg$c112 = function(f) { return f },
        peg$c113 = function(n) { return n },
        peg$c114 = function(v) { return v },
        peg$c115 = function(s, func, args) {
            return { 
                tokenType: "FuncCall",
                functionName: func,
                args: args,
                scope: s
            }
        },
        peg$c116 = "<=",
        peg$c117 = peg$literalExpectation("<=", false),
        peg$c118 = ">=",
        peg$c119 = peg$literalExpectation(">=", false),
        peg$c120 = "<",
        peg$c121 = peg$literalExpectation("<", false),
        peg$c122 = ">",
        peg$c123 = peg$literalExpectation(">", false),
        peg$c124 = "==",
        peg$c125 = peg$literalExpectation("==", false),
        peg$c126 = "!-",
        peg$c127 = peg$literalExpectation("!-", false),
        peg$c128 = function(e, op, e2) {
         	return {
            	tokenType: "BooleanExpression",
                op: op,
            	left: e,
                right: e2
            }
         },
        peg$c129 = function(s) { return s },
        peg$c130 = function(b) { return b },
        peg$c131 = function(i) { return i },
        peg$c132 = function(ae) { return ae },
        peg$c133 = function(ex) { return ex },
        peg$c134 = function(res) { return res },
        peg$c135 = function(cn, wc) {
        	return {
            	tokenType: "Class",
        		className: cn.trim(),
                within: wc
        	};
        },
        peg$c136 = function(f) {return f},
        peg$c137 = function(d) { return d },
        peg$c138 = function(fName, args, wF) {
            if(!wF.find(val => val.tokenType == "Return")){
                wF.push({ tokenType: "Return", value: null });
            }
        	return {
            	tokenType: "Function",
                funcName: fName.trim(),
                args: args,
                within: wF
            }
        },
        peg$c139 = function(r) { return r },
        peg$c140 = function(wL) { return wL },
        peg$c141 = function(ifS) { return ifS },
        peg$c142 = function(e) { return e },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseProgramStart();

      return s0;
    }

    function peg$parseProgramStart() {
      var s0, s1, s2, s3, s4;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parseSpaceOrNot();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseClass();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSpaceOrNot();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s1;
            s2 = peg$c0(s3);
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parseSpaceOrNot();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseClass();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSpaceOrNot();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s1;
              s2 = peg$c0(s3);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseClassKeyword() {
      var s0;

      if (input.substr(peg$currPos, 5) === peg$c1) {
        s0 = peg$c1;
        peg$currPos += 5;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }

      return s0;
    }

    function peg$parseFunctionKeyword() {
      var s0;

      if (input.substr(peg$currPos, 4) === peg$c3) {
        s0 = peg$c3;
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }

      return s0;
    }

    function peg$parseNumberKeyword() {
      var s0;

      if (input.substr(peg$currPos, 6) === peg$c5) {
        s0 = peg$c5;
        peg$currPos += 6;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      return s0;
    }

    function peg$parseStringKeyword() {
      var s0;

      if (input.substr(peg$currPos, 6) === peg$c7) {
        s0 = peg$c7;
        peg$currPos += 6;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parseBooleanKeyword() {
      var s0;

      if (input.substr(peg$currPos, 7) === peg$c9) {
        s0 = peg$c9;
        peg$currPos += 7;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }

      return s0;
    }

    function peg$parseOpenCurly() {
      var s0;

      if (peg$c11.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }

      return s0;
    }

    function peg$parseCloseCurly() {
      var s0;

      if (peg$c13.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }

      return s0;
    }

    function peg$parseOpenParen() {
      var s0;

      if (peg$c15.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }

      return s0;
    }

    function peg$parseCloseParen() {
      var s0;

      if (peg$c17.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }

      return s0;
    }

    function peg$parseEquals() {
      var s0;

      if (peg$c19.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }

      return s0;
    }

    function peg$parseSemiColon() {
      var s0;

      if (peg$c21.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }

      return s0;
    }

    function peg$parseSingleQuote() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 39) {
        s0 = peg$c23;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }

      return s0;
    }

    function peg$parseDoubleQuote() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 34) {
        s0 = peg$c25;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c26); }
      }

      return s0;
    }

    function peg$parseDecimalPoint() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 46) {
        s0 = peg$c27;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }

      return s0;
    }

    function peg$parsePeriod() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 46) {
        s0 = peg$c27;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }

      return s0;
    }

    function peg$parseComma() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 44) {
        s0 = peg$c29;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }

      return s0;
    }

    function peg$parseNegativeSign() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 45) {
        s0 = peg$c31;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c32); }
      }

      return s0;
    }

    function peg$parseWord() {
      var s0, s1, s2;
